# AWS-Cost-Canceler

./: .env.example  .gitignore  README.md  fix_pay_as_you_go.html  pyproject.toml  requirements.txt  run_features_tests.py  run_report.py  run_tests.py
data/reports/: aws_cost_report_2025-04-15.html  aws_cost_report_2025-04-16.html  aws_cost_report_2025-04-17.html  aws_cost_report_2025-04-20.html  aws_cost_report_2025-04-21.html  aws_cost_report_2025-04-22.html  aws_cost_report_2025-04-23.html  aws_cost_report_2025-04-24.html
data/reports/static/css/: report.css
docs/: NOVA_ACT_SDK_SETUP.md
src/nova_act/impl/: common.py  protocol.py
src/nova_act/samples/aws/: aws_master_controller.py
src/nova_act/samples/aws/data/: canceled_services.json
src/nova_act/util/: logging.py
src/nova_cost/: __init__.py  api.py  cli.py
src/nova_cost/adapters/: aws_cost_adapter.py  cli_adapter.py  html_report_adapter.py
src/nova_cost/api/: __init__.py  app.py  service_cancellation.py
src/nova_cost/domain/: ports.py  services.py
src/nova_cost/services/: aws_cost_monitor.py  report_generator.py
src/nova_cost/templates/: report_template.html
src/nova_cost/utils/: aws_billing_detective.py  aws_resource_explorer.py  aws_resource_scanner.py  aws_service_classifier.py
tests/: test_aws_adapter.py  test_cli.py  test_cost_analysis_service.py  test_dashboard_features.py  test_html_adapter.py  test_html_report_enhanced.py  test_integration.py  verify_dashboard_features.js
tests/utils/: test_aws_resource_scanner.py  test_service_cancellation.py
(+14 files in other folders)
