[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nova-act"
version = "1.0.0"
description = "A Python SDK for Amazon Nova Act."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Amazon Nova Act", email="nova-act@amazon.com"},
]
dependencies = [
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
nova-act = "nova_act.cli:main"

[tool.black]
line-length = 88

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
